--- a/html/index.html
+++ b/html/index.html
@@ -7,5 +7,10 @@
   <div id="image">
   </div>
   <script src = "http://ajax.googleapis.com/ajax/libs/jquery/1.3/jquery.min.js"></script>
-  <script>$("#image").append(https://s3.amazonaws.com/learn-verified/painting-with-dog.gif)</script>
+  <script>
+  $("#image").append(https://s3.amazonaws.com/learn-verified/painting-with-dog.gif);
+  var element = document.createElement("div");
+  element.innerText = "This is a test";
+  document.body.append(element);
+  </script>
 </body>
