--- a/html/index.html
+++ b/html/index.html
@@ -8,9 +8,7 @@
   </div>
   <script src = "http://ajax.googleapis.com/ajax/libs/jquery/1.3/jquery.min.js"></script>
   <script>
-  $("#image").append(https://s3.amazonaws.com/learn-verified/painting-with-dog.gif);
-  var element = document.createElement("div");
-  element.innerText = "This is a test";
+  $("#image").prepend("image", { src = "https://s3.amazonaws.com/learn-verified/painting-with-dog.gif");
   document.body.append(element);
   </script>
 </body>
