--- a/html/index.html
+++ b/html/index.html
@@ -8,7 +8,7 @@
   </div>
   <script src = "http://ajax.googleapis.com/ajax/libs/jquery/1.3/jquery.min.js"></script>
   <script>
-  $("#image").prepend('<img src = "https://s3.amazonaws.com/learn-verified/painting-with-dog.gif>');
+  $("#image").prepend('<img src = "https://s3.amazonaws.com/learn-verified/painting-with-dog.gif />');
   document.body.append(element);
   </script>
 </body>
