--- a/html/index.html
+++ b/html/index.html
@@ -6,7 +6,7 @@
 <body>
   <div id="image">
   </div>
-  <script src = ""></script>
+  <script src = "http://ajax.googleapis.com/ajax/libs/jquery/1.3/jquery.min.js"></script>
   <script>
   $("#image").append('<img src = "https://s3.amazonaws.com/learn-verified/painting-with-dog.gif" />');
   </script>
